--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -76,3 +76,9 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++FunctionRedirects=(OldName="/Script/TPS_C.BaseUserWidget.UpdateAimCHTranslate",NewName="/Script/TPS_C.BaseUserWidget.UpdateAimChTranslate")
++FunctionRedirects=(OldName="/Script/TPS_C.BaseUserWidget.UpdateShootCHTranslate",NewName="/Script/TPS_C.BaseUserWidget.UpdateShootChTranslate")
++FunctionRedirects=(OldName="/Script/TPS_C.BaseUserWidget.getCurrentChTranslate",NewName="/Script/TPS_C.BaseUserWidget.GetCurrentChTranslate")
++PropertyRedirects=(OldName="/Script/TPS_C.BasePlayer.CurveAim",NewName="/Script/TPS_C.BasePlayer.AimCurve")
